<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/svSignup"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/lrSignup"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="138dp"
            app:srcCompat="@drawable/ic_home_black"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:isScrollContainer="true"
            app:met_baseColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            app:met_floatingLabel="normal"
            android:inputType="textPersonName"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/txtDNama" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:isScrollContainer="true"
            app:met_baseColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"
            android:id="@+id/txtDEmail"
            android:layout_below="@+id/txtDNama"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:isScrollContainer="true"
            app:met_baseColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:met_floatingLabel="normal"
            android:inputType="textPassword"
            android:id="@+id/txtDPassword"
            android:layout_below="@+id/txtDEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/btnSignup"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_below="@+id/txtDPassword"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/btnSignup"
            android:layout_centerHorizontal="true">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/askLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asklogin"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>