<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="false"
    android:id="@+id/svLogin"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lrLogin"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="138dp"
                app:srcCompat="@drawable/ic_home_black"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:windowSoftInputMode="adjustPan"
                android:imeOptions="flagNoFullscreen"
                app:met_baseColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:met_floatingLabel="normal"
                android:inputType="textEmailAddress"
                android:layout_marginTop="39dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/txtEmail" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:windowSoftInputMode="adjustPan"
                android:imeOptions="flagNoFullscreen"
                app:met_baseColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_below="@+id/txtEmail"
                android:layout_centerHorizontal="true"
                android:id="@+id/txtPassword" />
            <Button
                android:windowSoftInputMode="adjustPan"
                android:id="@+id/btnSignin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/signin"
                android:textSize="15sp"
                android:layout_below="@+id/txtPassword"
                android:layout_centerHorizontal="true" />
            <RelativeLayout
                android:windowSoftInputMode="adjustPan"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/btnSignin"
                android:layout_centerHorizontal="true">

                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/askAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/askaccount"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

