<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView

                            android:id="@+id/listCart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RelativeLayout
                            android:background="@color/grey"
                            android:textAlignment="center"
                            android:layout_below="@id/listCart"
                            android:padding="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/addMore"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/addmore"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_gravity="center"
                            android:padding="25dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detailaddress"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_gravity="center"
                            android:padding="25dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/detailpayment"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"
            android:text="Total" />

        <TextView
            android:id="@+id/totalSemua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toLeftOf="@+id/button2"
            android:layout_toRightOf="@+id/textView2"
            android:gravity="start"
            android:paddingLeft="15dp"
            android:text="Rp. Total"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/accept" />
    </RelativeLayout>
</RelativeLayout>